I was able to fix the layout issue on the about page. I also updated my resume and made sure it didn't automatically download once pressed.

--- a/src/components/Blurb/style.css
+++ b/src/components/Blurb/style.css
@@ -17,7 +17,7 @@ header {
     padding-top: 70px;
 }
 .col-9 {
-  height: 600px;
+  height: 655px;
   font-family: 'Times New Roman', Times, serif;
   margin-left: 200px;
   margin-top: 70px;
